@@ -683,7 +683,10 @@ static int windowCount = 0;
           __FILE__, __LINE__);
 #endif
 
-    [WINDOW setTitle:[self currentSessionName]];
+    if([[self currentSession] windowTitle] == nil)
+	[WINDOW setTitle:[self currentSessionName]];
+    else
+	[WINDOW setTitle:[[self currentSession] windowTitle]];
     
 #if DEBUG_METHOD_TRACE
     NSLog(@"%s(%d):-[PseudoTerminal setWindowTitle: exiting]",
